@@ -53,3 +53,4 @@ coverage.xml
 docs/_build/
 
 plugin.video.sarpur/resources
+plugin.video.sarpur.zip
